--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Users\\husssain\\miniconda3\\python.exe"
+    "python.pythonPath": "/home/hussain/miniconda3/bin/python"
 }
